--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -4,10 +4,17 @@ slug: "/intro"
 id: "intro"
 ---
 
-import useBaseUrl from '@docusaurus/useBaseUrl';
-import IntroButton from '@site/src/components/IntroButton.js';
+import useBaseUrl from "@docusaurus/useBaseUrl";
+import IntroButton from "@site/src/components/IntroButton.js";
 
-<img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/DataLifeCycle_KB.svg')} width="500" align="right" vspace="10" hspace="10"/>
+<img
+  alt="Data LifeCycle"
+  src={useBaseUrl("/img/Intro/DataLifeCycle_KB.svg")}
+  width="500"
+  align="right"
+  vspace="10"
+  hspace="10"
+/>
 
 The NFDI4Chem knowledge base provides information and recommendations to digitalise all key steps of chemical research to support scientists in their efforts to collect, store, process, analyse, publish, and reuse research data. This knowledge base is inspired by [RDMkit](https://rdmkit.elixir-europe.org/index.html) but has been tailored specifically towards Chemists as end-users.
 
@@ -16,13 +23,13 @@ Actions to [promote Open Science and Research Data Management](https://riojourna
 ## Why is RDM important for chemistry?
 
 :::danger Notice:
-Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal, hence, older data can be reused for current investigations. In most cases, it is even mandatory to be able to access older data, since experimental data or complex simulation data in particular can only be regenerated with great effort. 
+Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal, hence, older data can be reused for current investigations. In most cases, it is even mandatory to be able to access older data, since experimental data or complex simulation data in particular can only be regenerated with great effort.
 :::
 
 Main motivations for RDM in chemistry are:
 
 - to prevent the loss of data and ensure data security
-- to warrant long-term availability of research data 
+- to warrant long-term availability of research data
 - to accelerate retrieval of data and information
 - to enhance transparency, reproducibility allow verifiability of research findings
 - to boost sustainability by saving time and resources
@@ -40,28 +47,48 @@ The knowledge base offers different points of entry that help you in navigating 
 
 The domain pages present an exemplary workflow for different chemistry disciplines along the research data life cycle. Multiple domains are illustrated in a user profile. Guidelines are provided for all digitisation steps involved and domain-specific best practices for FAIR data are given. Find out how to apply good RDM and FAIR science in the context of your own specific discipline!
 
-<IntroButton url={"/docs/domain_guide"} imgUrl={"/img/nfdi4chem_Domains.svg"} text={"Domains"} />
+<IntroButton
+  url={"/docs/domain_guide"}
+  imgUrl={"/img/nfdi4chem_Domains.svg"}
+  text={"Domains"}
+/>
 
 ### Role-specific information
 
 The role pages focus on the motivation for role-specific requirements and answer the questions why RDM is important and how it can be implemented. Get a fast impression of all important RDM information related to your role!
 
-<IntroButton url={"/docs/role_guide/"} imgUrl={"/img/nfdi4chem_Roles.svg"} text={"Roles"} />
+<IntroButton
+  url={"/docs/role_guide/"}
+  imgUrl={"/img/nfdi4chem_Roles.svg"}
+  text={"Roles"}
+/>
 
 ### Handling data
 
 The handling data section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Moreover, aspects on data storage and archiving are also covered.
 
-<IntroButton url={"/docs/data_guide/"} imgUrl={"/img/nfdi4chem_Handling_Data.svg"} text={"Handling Data"} />
+<IntroButton
+  url={"/docs/data_guide/"}
+  imgUrl={"/img/nfdi4chem_Handling_Data.svg"}
+  text={"Handling Data"}
+/>
 
 ### Smartlab
 
 To enable fully digital workflows in chemistry, the development and provision of a modular virtual laboratory environment with concepts, services and software (smartlab) is essential. Electronic lab notebooks are an important part of the smartlab, as well as integration of analytical instrumentation and data transfer to repositories.
 
-<IntroButton url={"/docs/smartlab"} imgUrl={"/img/nfdi4chem_SmartLab.svg"} text={"Smartlab"} />
+<IntroButton
+  url={"/docs/smartlab"}
+  imgUrl={"/img/nfdi4chem_SmartLab.svg"}
+  text={"Smartlab"}
+/>
 
 ### Data Publishing
 
-In this category on data publishing you will find all the important information on the topic of data publishing. This includes the motivation to publish research data, paths to publish data, recommendations for research data repositories to be used, best practices and aspects of machine actionability.  
+In this category on data publishing you will find all the important information on the topic of data publishing. This includes the motivation to publish research data, paths to publish data, recommendations for research data repositories to be used, best practices and aspects of machine actionability.
 
-<IntroButton url={"/docs/data_publishing"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publishing"} />
+<IntroButton
+  url={"/docs/data_publishing"}
+  imgUrl={"/img/nfdi4chem_Data_Publication.svg"}
+  text={"Data Publishing"}
+/>
