refactor: replace IntroButton with FeatureButton

--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -5,7 +5,7 @@ id: "intro"
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
-import IntroButton from "@site/src/components/IntroButton.js";
+import FeatureButton from "@site/src/components/features/FeatureButton.js";
 
 <img
   alt="Data LifeCycle"
@@ -47,7 +47,7 @@ The knowledge base offers different points of entry that help you in navigating 
 
 The domain pages present an exemplary workflow for different chemistry disciplines along the research data life cycle. Multiple domains are illustrated in a user profile. Guidelines are provided for all digitisation steps involved and domain-specific best practices for FAIR data are given. Find out how to apply good RDM and FAIR science in the context of your own specific discipline!
 
-<IntroButton
+<FeatureButton
   url={"/docs/domain_guide"}
   imgUrl={"/img/nfdi4chem_Domains.svg"}
   text={"Domains"}
@@ -57,7 +57,7 @@ The domain pages present an exemplary workflow for different chemistry disciplin
 
 The role pages focus on the motivation for role-specific requirements and answer the questions why RDM is important and how it can be implemented. Get a fast impression of all important RDM information related to your role!
 
-<IntroButton
+<FeatureButton
   url={"/docs/role_guide/"}
   imgUrl={"/img/nfdi4chem_Roles.svg"}
   text={"Roles"}
@@ -67,7 +67,7 @@ The role pages focus on the motivation for role-specific requirements and answer
 
 The handling data section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Moreover, aspects on data storage and archiving are also covered.
 
-<IntroButton
+<FeatureButton
   url={"/docs/data_guide/"}
   imgUrl={"/img/nfdi4chem_Handling_Data.svg"}
   text={"Handling Data"}
@@ -77,7 +77,7 @@ The handling data section explains common problems and challenges regarding RDM.
 
 To enable fully digital workflows in chemistry, the development and provision of a modular virtual laboratory environment with concepts, services and software (smartlab) is essential. Electronic lab notebooks are an important part of the smartlab, as well as integration of analytical instrumentation and data transfer to repositories.
 
-<IntroButton
+<FeatureButton
   url={"/docs/smartlab"}
   imgUrl={"/img/nfdi4chem_SmartLab.svg"}
   text={"Smartlab"}
@@ -87,7 +87,7 @@ To enable fully digital workflows in chemistry, the development and provision of
 
 In this category on data publishing you will find all the important information on the topic of data publishing. This includes the motivation to publish research data, paths to publish data, recommendations for research data repositories to be used, best practices and aspects of machine actionability.
 
-<IntroButton
+<FeatureButton
   url={"/docs/data_publishing"}
   imgUrl={"/img/nfdi4chem_Data_Publication.svg"}
   text={"Data Publishing"}
