refactor: replace IntroButton with FeatureButton in data guide, smart lab, and lead by example sections

--- a/docs/30_data/00_data_guide.mdx
+++ b/docs/30_data/00_data_guide.mdx
@@ -1,50 +1,71 @@
 ---
 title: "Guide for Handling Data"
 slug: "/data_guide"
-id : "data_guide"
-
+id: "data_guide"
 ---
 
-import IntroButton from '@site/src/components/IntroButton.js'
+import FeatureButton from "@site/src/components/features/FeatureButton";
 
 :::info Guidance for getting started:
 In this section, you can find information and resources about important topics and how to handle your data. These overarching concepts will provide key information and recommendations (such as what software might be useful to you) and refer you to other appropriate pages within the knowledge base or external resources.
 :::
 
-
 ### Data Management Plan
-
 
 A data management plan (DMP) describes the strategies and measures for handling research data during and after a project. Its aim is to address and define the technical, organisational and legal aspects of research data management in a clearly defined document well in advance. Find out more about DMPs, how to write one and what tools are available:
 
-<IntroButton url={"/docs/dmp"} imgUrl={"/img/nfdi4chem_Data_Management_Plan.svg"} text={"Data Management Plan"} />
+<FeatureButton
+  url={"/docs/dmp"}
+  imgUrl={"/img/nfdi4chem_Data_Management_Plan.svg"}
+  text={"Data Management Plan"}
+/>
 
 ### Data Organisation
 
 Learn how to organise your data, e.g. via appropriate file naming conventions and folder structures. In this context, data versioning, metadata & file formats are also introduced.
 
-<IntroButton url={"/docs/data_organisation"} imgUrl={"/img/nfdi4chem_Data_Organisation.svg"} text={"Data Organisation"} />
+<FeatureButton
+  url={"/docs/data_organisation"}
+  imgUrl={"/img/nfdi4chem_Data_Organisation.svg"}
+  text={"Data Organisation"}
+/>
 
 ### Documentation
 
 Find out more about the tools, resources and software that can support you with data documentation.
 
-<IntroButton url={"/docs/data_documentation"} imgUrl={"/img/nfdi4chem_Data_Documentation.svg"} text={"Documentation"} />
+<FeatureButton
+  url={"/docs/data_documentation"}
+  imgUrl={"/img/nfdi4chem_Data_Documentation.svg"}
+  text={"Documentation"}
+/>
 
 ### Data Storage and Archiving
 
 Storing and and archiving your data needs to be carefully considered. How many copies? Where? What access do I grant? Find out more:
 
-<IntroButton url={"/docs/data_storage"} imgUrl={"/img/nfdi4chem_Data_Storage_and_Archiving.svg"} text={"Data Storage and Archiving"} />
+<FeatureButton
+  url={"/docs/data_storage"}
+  imgUrl={"/img/nfdi4chem_Data_Storage_and_Archiving.svg"}
+  text={"Data Storage and Archiving"}
+/>
 
 ### Data Publishing
 
 Want to make your data available to others? Not quite sure how or where to publish your data? Find out more:
 
-<IntroButton url={"/docs/data_publishing"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publishing"} />
+<FeatureButton
+  url={"/docs/data_publishing"}
+  imgUrl={"/img/nfdi4chem_Data_Publication.svg"}
+  text={"Data Publishing"}
+/>
 
 ### How to choose the right repository
 
 Not sure which repository is the right one for your data? Find out more about selected reposoitories and what data types they are appropriate for:
 
-<IntroButton url={"/docs/choose_repository"} imgUrl={"/img/nfdi4chem_How_to_choose_the_right_repository.svg"} text={"How to choose the right repo"} />
+<FeatureButton
+  url={"/docs/choose_repository"}
+  imgUrl={"/img/nfdi4chem_How_to_choose_the_right_repository.svg"}
+  text={"How to choose the right repo"}
+/>
