--- a/docs/40_smartlab/00_smartlab.mdx
+++ b/docs/40_smartlab/00_smartlab.mdx
@@ -4,7 +4,7 @@ slug: "/smartlab"
 id: "smartlab"
 ---
 
-import IntroButton from "@site/src/components/IntroButton.js";
+import FeatureButton from "@site/src/components/features/FeatureButton";
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Smart Laboratory (Smart Lab)
@@ -19,7 +19,7 @@ In this section, key components of the smart lab will be introduced to you.
 
 ## Get started:
 
-<IntroButton
+<FeatureButton
   url={"/docs/eln"}
   imgUrl={"/img/nfdi4chem_SmartLab.svg"}
   text={"Electronic Lab Notebooks"}
