--- a/docs/50_data_publication/51_lbe/00_lbe_intro.mdx
+++ b/docs/50_data_publication/51_lbe/00_lbe_intro.mdx
@@ -4,7 +4,7 @@ slug: "/lbe_intro"
 id: "lbe_intro"
 ---
 
-import IntroButton from '@site/src/components/IntroButton.js'
+import FeatureButton from "@site/src/components/features/FeatureButton";
 
 NFDI4Chem has a clear vision of how chemistry research data will be collected, processed, archived, shared and published. The development of standards for metadata, minimum information, analytical data formats as well as publication standards includes sample datasets in a substantial standard-compliant manner.
 
@@ -16,7 +16,12 @@ Take a look at the list for inspiration as to what is already possible today!
 
 Do you want to have your published dataset highlighted here or do you need assistance in the preparation of your dataset for publication? Pledge your dataset to NFDI4Chem! More information can be found [here](https://www.nfdi4chem.de/index.php/2022/12/15/data-pledge/).
 
-<IntroButton url={"/docs/datasets"} imgUrl={"/img/nfdi4chem_Lead_by_Example.svg"} text={"View Datasets"} />
+<FeatureButton
+  url={"/docs/datasets"}
+  imgUrl={"/img/nfdi4chem_Lead_by_Example.svg"}
+  text={"View Datasets"}
+/>
 
-----
+---
+
 Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
