feat: add resource buttons to dmp article

--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -3,6 +3,8 @@ title: "Data Management Plan"
 slug: "/dmp"
 ---
 
+import Features from "@site/src/components/features/Features";
+
 # Data Management Plan (DMP)
 
 ## Introduction
@@ -75,6 +77,21 @@ The Research Data Management Organizer (RDMO) is a free online tool that is spec
 
 NFDI4Chem offers a chemistry-specific Data Management Plan (DMP) template designed to guide researchers through the process of writing a DMP by answering structured questions. This template is based on a checklist provided by the German Research Foundation (DFG), enriched with chemistry-relevant content and supplemented with additional questions to ensure clarity and completeness.
 The catalogue of questions is available as a downloadable text document or can be used directly within the Research Data Management Organizer (RDMO).
+
+<Features
+  featureList={[
+    {
+      url: "https://rdmo.nfdi4chem.de/",
+      imgUrl: "/img/nfdi4chem_Data_Management_Plan.svg",
+      text: "NFDI4Chem RDMO instance",
+    },
+    {
+      url: "https://doi.org/10.5281/zenodo.10948510",
+      imgUrl: "/img/nfdi4chem_Data_Documentation.svg",
+      text: "Chemistry DMP Template",
+    },
+  ]}
+/>
 
 ## Sources and further information
 
