chore: update DMP support section with links to downloadable template and RDMO

--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -76,7 +76,8 @@ The Research Data Management Organizer (RDMO) is a free online tool that is spec
 ## How do I get support in writing my DMP?
 
 NFDI4Chem offers a chemistry-specific Data Management Plan (DMP) template designed to guide researchers through the process of writing a DMP by answering structured questions. This template is based on a checklist provided by the German Research Foundation (DFG), enriched with chemistry-relevant content and supplemented with additional questions to ensure clarity and completeness.
-The catalogue of questions is available as a downloadable text document or can be used directly within the Research Data Management Organizer (RDMO).
+
+The catalogue of questions is available as a [downloadable text document](https://doi.org/10.5281/zenodo.10948510) or can be used directly within the [Research Data Management Organizer (RDMO)](https://rdmo.nfdi4chem.de/).
 
 <Features
   featureList={[
@@ -88,7 +89,7 @@ The catalogue of questions is available as a downloadable text document or can b
     {
       url: "https://doi.org/10.5281/zenodo.10948510",
       imgUrl: "/img/nfdi4chem_Data_Documentation.svg",
-      text: "Chemistry DMP Template",
+      text: "Chemistry-specific DMP Template",
     },
   ]}
 />
