--- a/docs/40_smartlab/10_eln.mdx
+++ b/docs/40_smartlab/10_eln.mdx
@@ -18,38 +18,38 @@ Bringing advances in information technology to our labs (smartlab) does not nece
 One of the most important things that distinguishes an ELN from a blank piece of paper is the ability to document [metadata](/docs/metadata) in a structured and ideally human- and machine-readable way. For more information on the differences between simple systems, ELNs and Laboratory Information Management Systems (LIMS), see the following overview.
 
 <BulletContainer>
-    <BulletBox>
-        <h3>Simple system</h3>
-        <ul>
-            <li>Enter text</li>
-            <li>Add notes</li>
-            <li>Add files as attachments</li>
-            <li>Sharing</li>
-            <li>Searching</li>
-        </ul>
-        <em>e.g., Evernote GoogleDrive, Dropbox, MS Sharepoint</em>
-    </BulletBox>
-    <BulletBox secondary>
-        <h3>Electronic Lab Notebook (ELN)</h3>
-        <ul>
-            <li>Structured metadata in human and machine-readable formats</li>
-            <li>Discipline-specific functions / editors</li>
-            <li>Rights management</li>
-            <li>Audit trail</li>
-            <li>API</li>
-        </ul>
-        <em>e.g., Labfolder, RSpace, eLabFTW, Labguru</em>
-    </BulletBox>
-    <BulletBox>
-        <h3>Laboratory Information Management System</h3>
-        <ul>
-            <li>Sample management</li>
-            <li>Instrument integration</li>
-            <li>Electronic signatures</li>
-            <li>Reporting or statistics modules</li>
-        </ul>
-        <em>e.g., Benchling, Starlims, Limesophy</em>
-    </BulletBox>
+  <BulletBox>
+    <h3>Simple system</h3>
+    <ul>
+      <li>Enter text</li>
+      <li>Add notes</li>
+      <li>Add files as attachments</li>
+      <li>Sharing</li>
+      <li>Searching</li>
+    </ul>
+    <em>e.g., Evernote GoogleDrive, Dropbox, MS Sharepoint</em>
+  </BulletBox>
+  <BulletBox secondary>
+    <h3>Electronic Lab Notebook (ELN)</h3>
+    <ul>
+      <li>Structured metadata in human and machine-readable formats</li>
+      <li>Discipline-specific functions / editors</li>
+      <li>Rights management</li>
+      <li>Audit trail</li>
+      <li>API</li>
+    </ul>
+    <em>e.g., Labfolder, RSpace, eLabFTW, Labguru</em>
+  </BulletBox>
+  <BulletBox>
+    <h3>Laboratory Information Management System</h3>
+    <ul>
+      <li>Sample management</li>
+      <li>Instrument integration</li>
+      <li>Electronic signatures</li>
+      <li>Reporting or statistics modules</li>
+    </ul>
+    <em>e.g., Benchling, Starlims, Limesophy</em>
+  </BulletBox>
 </BulletContainer>
 
 ## Advantages of an ELN
@@ -57,42 +57,45 @@ One of the most important things that distinguishes an ELN from a blank piece of
 ELNs help to link experimental descriptions directly to the collected data so that all information can be found in one place. Furthermore, data loss is avoided by secure data storage and backups. Storing all the data in one central place helps also with knowledge management because the data is easily findable and accessible, even for new members in a research project. The biggest advantage of an ELN is that [metadata](/docs/metadata) is stored in a structured and [standardised](/docs/format_standards) way. This also helps with publishing research results and transferring research data to a repository.
 
 <BulletContainer>
-    <BulletBox>
-        <h3>Avoid Data Loss</h3>
-        <ul>
-            <li>Linking experimental descriptions to collected data (analogue and digital)</li>
-            <li>Secure data storage, backups</li>
-        </ul>
-    </BulletBox>
-    <BulletBox secondary>
-        <h3>Knowledge Management</h3>
-        <ul>
-            <li>Data is findable</li>
-            <li>Data is accessible</li>
-            <li>Data is available, even after change of personnel</li>
-        </ul>
-    </BulletBox>
-    <div className="row buttons">
-        <img
-            alt="Data LifeCycle"
-            width="80%"
-            src={useBaseUrl("/img/topics/FAIR_data_principles.png")}
-        />
-    </div>
-    <BulletBox secondary>
-        <h3>Standardised Documentation</h3>
-        <ul>
-            <li>Structured and standardised collection of metadata</li>
-            <li>Generation of interoperable (meta)data</li>
-        </ul>
-    </BulletBox>
-    <BulletBox >
-        <h3>Publication</h3>
-        <ul>
-            <li>Data provision for publication of research results</li>
-            <li>Simple transfer of data to repositories</li>
-        </ul>
-    </BulletBox>
+  <BulletBox>
+    <h3>Avoid Data Loss</h3>
+    <ul>
+      <li>
+        Linking experimental descriptions to collected data (analogue and
+        digital)
+      </li>
+      <li>Secure data storage, backups</li>
+    </ul>
+  </BulletBox>
+  <BulletBox secondary>
+    <h3>Knowledge Management</h3>
+    <ul>
+      <li>Data is findable</li>
+      <li>Data is accessible</li>
+      <li>Data is available, even after change of personnel</li>
+    </ul>
+  </BulletBox>
+  <div className="row buttons">
+    <img
+      alt="FAIR_data_principles"
+      width="80%"
+      src={useBaseUrl("/img/topics/FAIR_data_principles.png")}
+    />
+  </div>
+  <BulletBox secondary>
+    <h3>Standardised Documentation</h3>
+    <ul>
+      <li>Structured and standardised collection of metadata</li>
+      <li>Generation of interoperable (meta)data</li>
+    </ul>
+  </BulletBox>
+  <BulletBox>
+    <h3>Publication</h3>
+    <ul>
+      <li>Data provision for publication of research results</li>
+      <li>Simple transfer of data to repositories</li>
+    </ul>
+  </BulletBox>
 </BulletContainer>
 
 FAIR Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0).
