feat: replace <img> tag with Markdown syntax for improved image handling in data publishing document

--- a/docs/50_data_publication/00_data_publishing.mdx
+++ b/docs/50_data_publication/00_data_publishing.mdx
@@ -4,8 +4,6 @@ slug: "/data_publishing"
 id: "data_publishing"
 ---
 
-import useBaseUrl from "@docusaurus/useBaseUrl";
-
 # Data Publishing
 
 :::info Applies to:
@@ -24,13 +22,7 @@ To publish data is essential to ensure that findings are transparent and reprodu
 
 There are direct benefits for researchers who publish their data. Data publications increase your career recognition, enable new collaborations, and provide a citation advantage compared to articles without an associated and linked dataset in a research data repository.
 
-<img
-    align="center"
-    src={useBaseUrl("/img/data_pub/data_publication_brian_hole_CC_BY_40.png")}
-    alt="Data Publication Brian Hole CC BY 4.0"
-    width="80%"
-/>
-
+![Data Publication Brian Hole CC BY 4.0](/img/data_pub/data_publication_brian_hole_CC_BY_40.png)  
 (Source: Brian Hole, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/), [Slideshare](https://www.slideshare.net/brianhole/the-journal-of-open-archaeology-data-and-prime-incentivising-open-data-archiving))
 
 Additionally, the research community benefits here as, for example, new research is made possible and efficiency in research increases. Also the public sector will profit by enhanced public trust in science, as data publishing allows for the validation of research results. Nonetheless, the publication of data is also of economic benefit if the results can be reused by the private sector.
@@ -39,8 +31,8 @@ Additionally, the research community benefits here as, for example, new research
 
 There are two main ways to publish research data:
 
--   publish data in a [research data repository](/docs/repositories/)
--   publish a separate [data article](/docs/data_articles/) with the corresponding dataset published in a [research data repository](/docs/repositories/)
+- publish data in a [research data repository](/docs/repositories/)
+- publish a separate [data article](/docs/data_articles/) with the corresponding dataset published in a [research data repository](/docs/repositories/)
 
 :::info Info:
 Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publishing in generic repositories requires manual FAIRification.
@@ -58,10 +50,10 @@ Still confused about how to publish chemistry data? We do provide a consulting a
 
 ## Sources and further information
 
--   [The citation advantage of linking publications to research data](https://doi.org/10.1371/journal.pone.0230416)
--   [NSF Public Access Plan 2.0](https://nsf-gov-resources.nsf.gov/2023-06/NSF23104.pdf)
--   [DFG Code of Conduct, Guideline 13: Providing public access to research results](https://wissenschaftliche-integritaet.de/en/code-of-conduct/providing-public-access-to-research-results/)
--   [How does Open Science practice differ between research disciplines?](https://theplosblog.plos.org/2023/07/open-science-by-discipline/)
+- [The citation advantage of linking publications to research data](https://doi.org/10.1371/journal.pone.0230416)
+- [NSF Public Access Plan 2.0](https://nsf-gov-resources.nsf.gov/2023-06/NSF23104.pdf)
+- [DFG Code of Conduct, Guideline 13: Providing public access to research results](https://wissenschaftliche-integritaet.de/en/code-of-conduct/providing-public-access-to-research-results/)
+- [How does Open Science practice differ between research disciplines?](https://theplosblog.plos.org/2023/07/open-science-by-discipline/)
 
 ---
 
